SF Primes/src/objects/Portal_Form__c.object
<CustomObject>
    <fields>
        <fullName>Associate_Location__c</fullName>
        <formula>DMSRSA_Associate_Name__r.HR_Location__c</formula>
        <label>Associate Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_Manager__c</fullName>
        <formula>DMSRSA_Associate_Name__r.HR_Manager__r.Full_Name__c</formula>
        <label>Associate Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_Title__c</fullName>
        <formula>DMSRSA_Associate_Name__r.HR_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associate Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_Vendor_ID__c</fullName>
        <formula>DMSRSA_Associate_Name__r.Vendor_ID__c</formula>
        <label>Associate Vendor ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMSRSA_Associate_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Associate Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>CDK Global</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Portal Forms</relationshipLabel>
        <relationshipName>Portal_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMSRSA_Contractor_First_Name__c</fullName>
        <label>Contractor First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMSRSA_Contractor_Last_Name__c</fullName>
        <label>Contractor Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMSRSA_Contractor_Title__c</fullName>
        <label>Contractor Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMSRSA_Group_Name__c</fullName>
        <label>Group Name</label>
        <picklist>
            <picklistValues>
                <fullName>RSA ICS (CarInk!) Restricted DMS Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA DataSet Restricted DMS Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA DMI, 3PA, Integralink Restricted DMS Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA MenuVantage, Superior Restricted DMS Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA ProQuotes Restricted DMS Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA Baseline DMS Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SamAccount and Expiration date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMS_RSA_Confirmation_Message__c</fullName>
        <formula>&quot;Thank you for submitting a new DMS RSA Request. A new eHelp Case (after the Portal Form has been Saved) has been submitted on your behalf.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DMS RSA Confirmation Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_RSA_Type__c</fullName>
        <label>DMS RSA Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_AM_PM__c</fullName>
        <label>AM/PM</label>
        <picklist>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HR_Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HR_Termination_Hour__c</fullName>
        <label>Termination Hour</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HR_Termination_Minutes__c</fullName>
        <label>Termination Minutes</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Portal Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PF - {00000}</displayFormat>
        <label>Portal Forms Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Forms</pluralLabel>
    <recordTypes>
        <fullName>DMS_RSA_Associate</fullName>
        <active>true</active>
        <label>DMS RSA Associate</label>
    </recordTypes>
    <recordTypes>
        <fullName>DMS_RSA_Contractor</fullName>
        <active>true</active>
        <label>DMS RSA Contractor</label>
    </recordTypes>
    <recordTypes>
        <fullName>HR_Termination</fullName>
        <active>true</active>
        <description>HR Terminations</description>
        <label>HR Termination</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>